--- a/example/src/index.css
+++ b/example/src/index.css
@@ -45,9 +45,13 @@ tbody td {
   padding: 10px;
 }
 .option {
-  flex: 0 0 200px; 
+  flex: 0 0 200px;
+  display: flex;
+  align-items: center; 
+  font-family: "Roboto Mono", monospace;
 }
 .option-toggle {
+  font-family: inherit;
   background-color: transparent;
   border: none;
   padding: 5px 10px;
@@ -63,8 +67,6 @@ tbody td {
   font-size: 20px;
   color: #999;
 }
-.option-toggle .option-title {
-  font-family: "Roboto Mono", monospace;
-  font-size: 12px;
-  margin-left: 10px;
+.option-title {
+  margin: 0 10px;
 }
